angular content update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,7 +16,7 @@
     },
     "SERVICES": {
       "TITLE": "SERVICES",
-      "TEXT1": "GMserve providing best and affordable web development services globally. We can handle all of your website needs. Help in hosting, email, domain name, secure hosting and signature hosting accounts.",
+      "TEXT1": "Goutam singh providing best and affordable web development services globally. We can handle all of your website needs. Help in hosting, email, domain name, secure hosting and signature hosting accounts.",
       "TEXT2": "Web development",
       "TEXT3": "Develop application with high quality security.Easy access and search options of the products for the customers."
     }
