--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -16,7 +16,7 @@
     },
     "SERVICES": {
       "TITLE": "SERVICES",
-      "TEXT1": "GMserve fournit les meilleurs services de développement Web abordables au monde. Nous pouvons répondre à tous les besoins de votre site Web. Aide en hébergement, courrier électronique, nom de domaine, hébergement sécurisé et comptes d'hébergement de signature.",
+      "TEXT1": "Goutam singh fournit les meilleurs services de développement Web abordables au monde. Nous pouvons répondre à tous les besoins de votre site Web. Aide en hébergement, courrier électronique, nom de domaine, hébergement sécurisé et comptes d'hébergement de signature.",
       "TEXT2": "développement web",
       "TEXT3": "Développer une application avec une sécurité de haute qualité. Accès facile et options de recherche des produits pour les clients"
     }
